<resources>
    <string name="app_name">Grocery List Activity</string>
    <string name="to_add_groceries_text">Click + to add groceries</string>
    <string name="no_groceries_text">No groceries added</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_menu_delete">Delete Grocery Item</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_menu_edit">Edit Grocery Item</string>
    <string name="edit_item_quantity_hint">Item Quantity:</string>
    <string name="edit_item_desc_hint">Item Description:</string>
    <string name="edit_item_name_hint">Item Name:</string>
    <string name="add_item_quant_hint">Grocery item quantity</string>
    <string name="add_item_desc_hint">Grocery item description</string>
    <string name="add_item_name_hint">Grocery item name</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="delete_item_title">Delete grocery item?</string>
    <string name="delete_item_message">Are you sure you want to delete this grocery item?</string>
</resources>
