<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addItemNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:paddingTop="20dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groceryItemName"
            android:hint="@string/add_item_name_hint"
            android:paddingTop="20dp"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/addItemDescContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/groceryItemDescription"
            android:hint="@string/add_item_desc_hint"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/itemNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/groceryItemQuantity"
            android:hint="@string/add_item_quant_hint" />
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/dialog_cancel"
            android:id="@+id/cancelAddGroceryButton"
            android:background="@null"
            android:layout_toLeftOf="@+id/saveGroceryItemButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/dialog_save"
            android:id="@+id/saveGroceryItemButton"
            android:layout_gravity="right"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </RelativeLayout>

</LinearLayout>
